--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
     <script src="resources/js/matter.js" type="text/javascript"></script>
     <script src="resources/js/p5.js" type="text/javascript"></script>
-    <script src="resources/js/sketch.js" type="text/javascript"></script>
+    <script src="resources/js/sketch.1.js" type="text/javascript"></script>
+    <!-- <script src="resources/js/sketch.js" type="text/javascript"></script> -->
     <!-- <script src="resources/js/Box.js" type="text/javascript"></script> -->
     
 </head>
